# WsdlCppGen

./: .gitignore  AddServiceClient.cpp  AddServiceClient.h  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/addservice/server-go/cmd/addservice/: main.go
examples/addservice/server-go/internal/addservice/: service.go  service_test.go
examples/addservice/server-go/internal/config/: config.go  config_test.go
examples/addservice/server-go/templates/: AddService.wsdl.tmpl
samples/: AddService.wsdl  cpp_client_demo.cpp
service/addservice-go/: go.mod  main.go  main_test.go
src/: cli_main.cpp  gui_app.cpp  gui_main.cpp  main.cpp  native_dialogs.cpp  ui_sprites.generated.hpp  ui_sprites.hpp  wsdl_codegen.cpp  wsdl_codegen.hpp
src/core/: wsdl_codegen.cpp  wsdl_codegen.hpp
src/gui/: gui_app.cpp  ui_sprites.cpp
src/platform/: native_dialogs.hpp
